--- a/package.json
+++ b/package.json
@@ -34,12 +34,16 @@
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
+    "@types/node": "22.5.4",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.4",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.4"
   },
   "license": "MIT"
 }
