--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "eslint-config-next": "^14.1.4",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8.4.38",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.4"
   },
