--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
+    "@types/mapbox__rehype-prism": "^0.8.3",
     "@types/node": "22.5.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
