--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "@mapbox/rehype-prism": "^0.9.0",
     "@tailwindcss/typography": "^0.5.12",
     "calendar-link": "^2.8.0",
     "classnames": "^2.3.1",
@@ -31,13 +30,13 @@
     "next": "^14.1.4",
     "next-mdx-remote": "^5.0.0",
     "next-remote-watch": "2.0.0",
-    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remark-gfm": "^4.0.0"
+    "rehype-pretty-code": "^0.14.0",
+    "remark-gfm": "^4.0.0",
+    "shiki": "^1.29.2"
   },
   "devDependencies": {
-    "@types/mapbox__rehype-prism": "^0.8.3",
     "@types/node": "22.5.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
