--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "start": "next start",
     "export": "next build && next export",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "prepare": "husky"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
