--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "@types/node": "22.5.4",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "15.3.4",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-unused-imports": "^4.2.0",
     "husky": "^9.1.7",
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
